@@ -4,6 +4,7 @@ Changes in 1.3.6
 New features:
 - 2850167 IndicationProfile: CIM_ServiceAffectsElement creation 
 - 2875822 IndicationProfile: CIM_HostedService
+- 2875050 default MOFs should allow for multiple files
 
 Bugs fixed:
 
